centos2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos2
spec:
  containers:
  - name: centos2-container
    image: centos:latest
    command: ["sleep", "infinity"]
    resources:
      limits:
        memory: 4Gi
        cpu: "2"
      requests:
        memory: 4Gi
        cpu: "1"
    volumeMounts:
    - mountPath: /sharedvol
      name: sharedvol
  volumes:
    - name: sharedvol
      persistentVolumeClaim:
        claimName: master-vol
