mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo1
spec:
  containers:
  - name: centos-container
    image: bitnami/mongodb
    command: ["sleep", "infinity"]
    resources:
      limits:
    volumeMounts:
    - mountPath: /sharedvol
      name: sharedvol
  volumes:
    - name: sharedvol
      persistentVolumeClaim:
        claimName: master-vol
