prp-image-blast.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos1
spec:
  containers:
  - name: centos-container
    image: gitlab-registry.nautilus.optiputer.net/forsythc/container-blast
    command: ["sleep", "infinity"]
    resources:
      limits:
    volumeMounts:
    - mountPath: /sharedvol
      name: sharedvol
  volumes:
    - name: sharedvol
      persistentVolumeClaim:
        claimName: master-vol
